*Fix the secrect variable name - https://github.com/CruGlobal/appbuilder_platform_service/actions/runs/17763038951

--- a/.github/workflows/update-core-version.yml
+++ b/.github/workflows/update-core-version.yml
@@ -61,7 +61,7 @@ jobs:
       type: patch
       app_id: ${{ vars.GS_DEV_APP_ID }}
     secrets:
-      app_token: ${{ secrets.GS_DEV_APP_PK }}
+      app_secret: ${{ secrets.GS_DEV_APP_PK }}
 
   call-open-pr-fail:
     name: Tests Failed
