--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -92,11 +92,8 @@ jobs:
            uses: actions/checkout@v3
            with:
               path: ab_platform_web
+              submodules: true
               repository: CruGlobal/ab_platform_web
-         - name: Checkout ab_platform_web > core
-           uses: actions/checkout@v3
-           with:
-              path: ab_platform_web/AppBuilder/core
          - name: Checkout ab_service_web
            uses: actions/checkout@v3
            with:
